Aggiunta commenti e gestione errori pt.I